--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
 
-    <string name="app_name">Name That President</string>
+    <string name="app_name">Name That President!</string>
     <string name="menu_settings">Settings</string>
     <string name="main_title">Name That President</string>
     <string name="main_welcome_text">Welcome to Name That</string>
     <string name="main_current_stat">Best attempt:</string>
     <string name="main_start_button">Start</string>
     <string name="main_more_games">See More Name That! Games</string>
-
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_viewer">ViewerActivity</string>
+	<string name="viewer_next_button">Next</string>
+	<string name="menu_start_over">Start Over</string>
+	<string name="menu_main_menu">Main Menu</string>
+	<string name="menu_rate_this">Rate this App</string>
+	<string name="menu_about">About</string>
 </resources>
