This was a mjor clean up of the app. I added a "show me" button, to allow the user to see the one they have given up on during testing. I also perfected the Review button. It will successfully display only the questions the user got wrong on their last try. On the main menu, it asks the user if they would like to review all of the photos or just the one that got wrong previously. I also a preview photo on the main page. I changed the button colors on the main page. I also made the AssetManagement class a static class. There was no neet to create an object. Also added the code for querying "Name That" games on the marketplace for future apps. I would still like to add a "share this app" button. I still need fix the voice recognition isCorrect.
Signed-off-by: knennigtri <knennig213@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="score_back_button">Return to Start</string>
     <string name="score_review_button">Review Wrong Answers</string>
     <string name="main_review_button">Review</string>
+    <string name="viewer_answer_button">Show Me</string>
 
 </resources>
