--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="main_welcome_text">Welcome to</string>
     <string name="main_text">Text Text:</string>
-    <string name="main_start_button">Start</string>
+    <string name="main_start_button">Start/Continue</string>
     <string name="main_more_games">See More Name That!</string>
     <string name="title_activity_viewer">ViewerActivity</string>
     <string name="next_button">Next</string>
